# src/modules/business-functions/businessFunction.controller.js
@@ -1,0 +1,59 @@
+const service = require('./businessFunction.service');
+const { createSchema, updateSchema } = require('./businessFunction.validations');
+const { ValidationError, ConflictError } = require('../../common/errors');
+const { toPlainJSON } = require('../../common/util');
+
+const create = async (req, res, next) => {
+  const { error, value } = createSchema.validate(req.body);
+  if (error) return next(new ValidationError(error.details[0].message, error.details));
+
+  try {
+    const businessFunction = await service.create(value);
+    res.status(201).json(toPlainJSON(businessFunction));
+  } catch (err) {
+    if (err.code === 11000) return next(new ConflictError('A business function with this name already exists'));
+    next(err);
+  }
+};
+
+const getAll = async (req, res, next) => {
+  try {
+    const businessFunctions = await service.findAll(req.query);
+    res.json(toPlainJSON(businessFunctions));
+  } catch (err) {
+    next(err);
+  }
+};
+
+const getOne = async (req, res, next) => {
+  try {
+    const businessFunction = await service.findById(req.params.id);
+    res.json(toPlainJSON(businessFunction));
+  } catch (err) {
+    next(err);
+  }
+};
+
+const update = async (req, res, next) => {
+  const { error, value } = updateSchema.validate(req.body);
+  if (error) return next(new ValidationError(error.details[0].message, error.details));
+
+  try {
+    const businessFunction = await service.update(req.params.id, value);
+    res.json(toPlainJSON(businessFunction));
+  } catch (err) {
+    if (err.code === 11000) return next(new ConflictError('Another business function with this name already exists'));
+    next(err);
+  }
+};
+
+const remove = async (req, res, next) => {
+  try {
+    await service.remove(req.params.id);
+    res.status(204).send();
+  } catch (err) {
+    next(err);
+  }
+};
+
+module.exports = { create, getAll, getOne, update, remove };
